_sass/blog.scss
.blog-posts {
	list-style: none;
	padding: 0;

	li {
		margin: 100px 0;
	}
}

.blog-post {
	.author {
		padding: 30px 0 0 0;
		border: 1px solid #eee;
		margin: 30px 0;
		font-size: .8em;

		.square-image {
			width: 125px;
			height: 125px;
			margin-top: 0;
		}
		.blurb {
			text-align: center;
		}
	}

	h3 {
		margin: 0;
		a {
			color: var(--color-secondary-medium);
			text-decoration: none;
			font-weight: normal;
			font-size: 1.3em;
		}
	}

	h2 {
		text-align: left;
	}

	.blog-navigation {
		font-size: 14px;
		display: block;
		width: auto;
		overflow: hidden;
		a {
			display: block;
			float: left;
			margin: 1em 0;
		}

		.next {
			text-align: right;
		}
	}

	.post-details {
		border-bottom: 1px solid var(--brand-color-secondary);
		font-size: .9em;

		.blog-filter {
			display: inline-block;
			text-align: left;

			a {
				position: relative;
				top: -5px;
			}
		}

		a {
			text-decoration: none;
		}

		.post-date {
			float: right;
		}

		&:after {
			content: "";
			display: table;
			clear: both;
		}
	}

	.post-content {
		.button {
			margin: 30px 0 0 0;
		}
	}
}

.pagination {
	text-align: center;
}

.blog-filter {
	text-align: center;
	a {
		background: var(--brand-color-secondary);
    padding: 3px 5px;
    font-size: .8em;
    border-radius: 5px;
    color: var(--color-white);
		transition: .2s ease-in-out;

		&:hover {
			text-decoration: none;
			background: #00d3a9;
			color: white !important;
		}
	}
}

.blog-filter.cross a {
	padding-right: 8px;

	&:after {
		content: "x";
		font-size: .5em;
		position: relative;
		bottom: 4px;
		right: -3px;
	}
}

.code-block {
  padding: 2px;
  background-color: var(--color-primary-qtext);
  color: var(--color-primary-testimonial-wrapper);
  border-radius: 3px;
}

